gcc/testsuite/rust/rustc/ui/consts/issue-104768_dg.rs
const A: &_ = 0_u32;
// { dg-error ".E0121." "" { target *-*-* } .-1 }

fn main() {}

